#6: extended pairings queries and tests